OmsErrCode: 調整英文訊息; 增加 [新單成功] 之類的訊息代碼; OmsErrCode_NoError 改成 OmsErrCode_Null;

--- a/OmsErrCode/OmsErrCode.00xxx.cfg
+++ b/OmsErrCode/OmsErrCode.00xxx.cfg
@@ -1,64 +1,80 @@
 #
-# OMS 內部處理過程的錯誤
+# OMS 內部處理過程的訊息
 #
-00001 = Order not found                 | 刪改查要求,但找不到對應的委託書,請檢查 IniSNO 或 OrdKey(BrkId or Market or SessionId or OrdNo)
-00002 = Order initiator not found       | 委託書號已存在,但遺漏新單回報
-00003 = Bad report                      | 有問題的回報,可能是重複回報,或回報內容不正確
-00004 = Symbol not found                | 沒有商品資料,無法下單
-00005 = Bad symbol decimal locator      | 商品資料的價格小數位有誤
+# 嚴格來說, 此為 [訊息代碼], 應該是 MsgCode, 但為了相容性, 只好將錯就錯了!
+# 委託錯誤或失敗, 應先從 OrdSt 或 ReqSt 來判斷, 然後再透過 ErrCode 來判斷原因.
+#
 
-00010 = Request step not found          | 沒有定義下單流程
-00011 = Unknown request type            | 下單要求型別有誤,或不是「下單流程」所期望的「下單要求」
-00012 = Bad request at this order       | 改單要求不支援此種委託
+# 這裡的 OK 代碼, 不一定會提供, 由主機端的處理程序決定.
+00006 = Order OK         | 新單OK
+00007 = Cancel OK        | 刪單OK
+00008 = Amend OK         | 改量OK
+00009 = Amend Price OK   | 改價OK
+00013 = Quote request OK | 詢價OK 
+00014 = Quote OK         | 報價OK
+# 證交所 [FIX 下單線路] 的 [IOC/FOK 取消], 會使用 20048 回覆, 不會用到底下的 00015,00016.
+00015 = IOC cancelled    | IOC剩餘取消
+00016 = FOK cancelled    | FOK剩餘取消
 
-00100 = Bad BrkId                       | 下單要求的 BrkId 找不到對應的券商資料
-00101 = Bad OrdNo                       | 不是新單要求,必須提供 OrdNo
+#################################################################################
+00100 = BrkId Error                               | 下單要求的 BrkId 找不到對應的券商資料
+00101 = OrdNo must be provided                    | 不是新單要求,必須提供 OrdNo
 
-00110 = Bad SessionId                   | SessionId 不正確
-00111 = Bad SessionId symbol not found  | 新單沒有填 SessionId,且找不到商品資料,無法自動填 SessionId
-00112 = Bad symbol SessionId            | 新單沒有填 SessionId,且商品資料的 SessionId 不正確
-00113 = TradingSession Closed           | 已收盤
+00110 = SessionId Error                           | SessionId 不正確
+00111 = SessionId Error, Symbol not found         | 新單沒有填 SessionId,且找不到商品資料,無法自動填 SessionId
+00112 = SessionId Error, Symbol incorrect         | 新單沒有填 SessionId,且商品資料的 SessionId 不正確
+00113 = TradingSession Closed                     | 已收盤
 
-00120 = Bad MarketId                    | 不認識的 MarketId,無法決定下單要求要送到何處
-00121 = Bad MarketId symbol not found   | 新單沒有填 MarketId,且找不到商品資料,無法自動填 MarketId
-00122 = Bad symbol MarketId             | 新單沒有填 MarketId,且商品資料的 MarketId 不正確
+00120 = MarketId cannot be identified             | 不認識的 MarketId,無法決定下單要求要送到何處
+00121 = MarketId Error, Symbol not found          | 新單沒有填 MarketId,且找不到商品資料,無法自動填 MarketId
+00122 = MarketId Error, Symbol incorrect          | 新單沒有填 MarketId,且商品資料的 MarketId 不正確
 
-00130 = Bad LgOut                       | 不正確的 LgOut 線路群組設定
+00130 = LgOut Error                               | 不正確的 LgOut 線路群組設定
 
-00200 = Bad RxKind                      | RxKind 有誤
-00201 = Bad Side                        | 買賣別有誤
-00202 = Bad ChgQty                      | 改單期望的改後數量有誤(不可增量,或期望的改後數量與現在LeavesQty+CumQty相同)
-00203 = Bad Price                       | 下單價格有誤
-00204 = Bad PriType                     | PriType有誤
-00205 = Bad TimeInForce                 | TimeInForce有誤
-00206 = Symb no market price            | 商品不支援市價下單
-00207 = Not support change price        | 不支援改價(定價交易無改價功能,或系統不支援改價)
+00200 = RxKind Error                              | RxKind 有誤
+00201 = Side Error                                | 買賣別有誤
+00202 = ChgQty Error                              | 改單期望的改後數量有誤(不可增量,或期望的改後數量與現在LeavesQty+CumQty相同)
+00203 = Price Error                               | 下單價格有誤
+00204 = PriType Error                             | PriType有誤
+00205 = TimeInForce Error                         | TimeInForce有誤
+00206 = Symbol does not support market price      | 商品不支援市價下單
+00207 = No support for price change               | 不支援改價(定價交易無改價功能,或系統不支援改價)
 
-00300 = Ivr not found, or no permission | 下單帳號有誤或沒權限
-00301 = Field not match                 | 刪改查提供的欄位與原委託不同
-00302 = Deny add report                 | 補單操作,必須有 AllowAddReport 權限; 或有權限但找不到委託
-00303 = IniReq Must be a RequestNew     | 不支援使用 OmsRequestIni 執行刪改查     # 不一定會發生,由實際下單步驟決定是否支援.
+00300 = Ivr not found, or no permission           | 下單帳號有誤或沒權限
+00301 = Field not match                           | 刪改查提供的欄位與原委託不同
+00302 = No AllowAddReport permission, or No Order | 補單操作,必須有 AllowAddReport 權限; 或有權限但找不到委託
+00303 = IniReq Must be a RequestNew               | 不支援使用 OmsRequestIni 執行刪改查     # 不一定會發生,由實際下單步驟決定是否支援.
 
-00400 = Over flow control               | 客戶端超過下單流量管制
+00400 = Over flow control                         | 客戶端超過下單流量管制
 
-00500 = Bad OrdTeamGroupId              | 委託櫃號群組有誤
-00501 = Order already exists            | 新單自編委託書,但委託書已存在
-00502 = OrdNo overflow                  | 自訂委託櫃號,但委託書號已用完
-00503 = OrdNo must empty                | 沒有自編委託櫃號(或委託書號)的權限,新單要求的 OrdNo 必須為空白
-00504 = OrdTeam used up                 | 委託櫃號已用完(或沒設定)
-00505 = OrdNoMap not found              | 委託書號對照表沒找到,可能是 MarketId 或 SessionId 不正確,或系統沒設定
-00506 = OrdTeam deny                    | 無此委託櫃號權限
+00500 = OrdTeamGroupId Error                      | 委託櫃號群組有誤
+00501 = OrdNo already exists                      | 新單自編委託書,但委託書已存在
+00502 = OrdNo used up                             | 自訂委託櫃號,但委託書號已用完
+00503 = OrdNo must empty                          | 沒有自編委託櫃號(或委託書號)的權限,新單要求的 OrdNo 必須為空白
+00504 = OrdTeam used up                           | 委託櫃號已用完(或沒設定)
+00505 = OrdNoMap not found                        | 委託書號對照表沒找到,可能是 MarketId 或 SessionId 不正確,或系統沒設定
+00506 = No OrdTeam permission                     | 無此委託櫃號權限
 
-00600 =                                 | 請求 [主機{:AskToRemote:}] 協助繞送
+00600 = Order Routing request                                 | 請求 [主機{:AskToRemote:}] 協助繞送
 # 由繞送的接收端負責處理此錯誤.
-00601 =                                 | 回報回補時才發現繞進請求
+00601 = Order Routing request Failed (Receiver)               | 回報回補時才發現繞進請求
 # 由繞送的請求端負責處理此錯誤.
-00602 =                                 | 回報回補時才發現繞送退單
-00610 =                                 | 繞送接收端,無可用線路
-00611 =                                 | 繞送接收端,忙碌中
+00602 = Order Routing request Failed (Sender)                 | 回報回補時才發現繞送退單
+00610 = No Trading lines available                            | 繞送接收端,無可用線路
+00611 = System is busy                                        | 繞送接收端,忙碌中
 
-00900 = No ready line                   | 無可用的下單連線:{:Lg:}
-00901 = The order has expired           | 下單要求過期了
-00902 = Line broken rejected            | 送出後斷線,且未送達交易所
-00903 = Market data broken              | 行情線路無資料
-00904 = Abandon before run              | 取消於系統執行前
+00701 = Order not found                                       | 刪改查要求,但找不到對應的委託書,請檢查 IniSNO 或 OrdKey(BrkId or Market or SessionId or OrdNo)
+00702 = Missed new Order Report                               | 委託書號已存在,但遺漏新單回報
+00703 = Repeated or Incorrect Report                          | 有問題的回報,可能是重複回報,或回報內容不正確
+00704 = Symbol not found                                      | 沒有商品資料,無法下單
+00705 = Symbol decimal place Error                            | 商品資料的價格小數位有誤
+
+00710 = Request step not found                                | 沒有定義下單流程
+00711 = Unknown request type                                  | 下單要求型別有誤,或不是「下單流程」所期望的「下單要求」
+00712 = No support for this Order type                        | 改單要求不支援此種委託
+
+00900 = No ready line                                         | 無可用的下單連線:{:Lg:}
+00901 = The order has expired                                 | 下單要求過期了
+00902 = Disconnected after delivery, no delivered to Exchange | 送出後斷線,且未送達交易所
+00903 = Market data Error                                     | 行情線路無資料
+00904 = Cancelled before system execution                     | 取消於系統執行前
