Tws: 先收到成交, 且確定成交回報後不會有新單回報的處理(FilledBeforeNewDone).

--- a/OmsErrCode/OmsErrCode.00xxx.cfg
+++ b/OmsErrCode/OmsErrCode.00xxx.cfg
@@ -16,6 +16,8 @@
 00015 = IOC cancelled    | IOC剩餘取消
 00016 = FOK cancelled    | FOK剩餘取消
 
+00096 = Order OK(Filled) | 新單OK(成交)
+
 #################################################################################
 00100 = BrkId Error                               | 下單要求的 BrkId 找不到對應的券商資料
 00101 = OrdNo must be provided                    | 不是新單要求,必須提供 OrdNo
