增加 OmsRequestBase::ResetOkErrCode() 調整下單成功後 ErrCode 的代碼。

--- a/OmsErrCode/OmsErrCodeAct.cfg
+++ b/OmsErrCode/OmsErrCodeAct.cfg
@@ -31,6 +31,8 @@
 #       * fa or ExchangeCanceled
 #     * ErrCode=x
 #       * 改變 ErrCode 的值, 改變後的 ErrCode 不會再循環參照 Act.
+#     * ResetOkErrCode=Y
+#       * 將 ErrCode 重設成系統預設值, 例: 新單成功(6=NewOrderOK), 改量成功(8=ChgQtyOK)...
 #   * 條件類, 若設定多個條件, 則必須同時成立.
 #     * During=begin-end
 #       * 有效期間: begin <= 現在時間 <= end
@@ -104,7 +106,6 @@
 # 所以會在 OmsTwfFilled 處理, 不用在此設定: 40051, 40053.
 
 # ----------------------------------------------------------------------------
-# 40248:「警告該 session 以達設定之流量值80%」, 40248:「... 90%」:
-# 將 ErrCode 改成 0=成功;
-40248 : ErrCode=0
-40249 : ErrCode=0
+# 40248:「警告該 session 已達設定之流量值80%」; 40249:「... 90%」;
+40248 : ResetOkErrCode=Y
+40249 : ResetOkErrCode=Y
