TWS 增加: T30匯入旗標: [注意、處置...]、[全額交割、平盤下可券賣、平盤下可借券賣出]、[借券相關旗標];

--- a/OmsErrCode/OmsErrCode.10xxx.cfg
+++ b/OmsErrCode/OmsErrCode.10xxx.cfg
@@ -121,6 +121,7 @@ zh: 現股庫存不足 {:Over:$FQTY:}: 庫存={:Bal:$FQTY:}/賣未成交={:Leave
 # 現股當沖賣出(OType='d',但不可先賣當沖,原因請參考RFlags), 帳號自有可賣數量不足.
 10211 = | 可賣不足 {:Over:$FQTY:}: 可賣={:Self:$FQTY:}/此筆新增={:Add:$FQTY:}/庫存={:Bal:$FQTY:}/買可沖={:Filled:$FQTY:}/已賣={:Used:$FQTY:}/旗標={:RFlags:}
 10212 = | 或有券源不足 {:Over:$FQTY:}: 或有券源={:SeQty:$FQTY:}/已用量={:Used:$FQTY:}/自有可賣={:Self:$FQTY:}/此筆新增={:Add:$FQTY:}
+10213 = | 借券庫存不足 {:Over:$FQTY:}: 借券庫存={:Bal:$FQTY:}/賣未成交={:Leaves:$FQTY:}/賣成交={:Filled:$FQTY:}/此筆新增={:Add:$FQTY:}
 
 # --------------------------------------------
 10300 = {
