新增二次強迫下單要求 OmsTwsRequestForce. 1. OmsRequestPolicy 新增 ScForceFlags_ 後續風控得以取得其強迫權限; 2. OmsRequestTrade 新增ForceResetPolicy(), 因強迫者若是不同登入帳號, 需將強迫者權限設定至 iniRequest, 在初始化委託書號時才能以強迫者權限初始化; 3. 新增二段強迫下單要求 OmsTwsRequestForce;

--- a/OmsErrCode/OmsErrCode.00xxx.cfg
+++ b/OmsErrCode/OmsErrCode.00xxx.cfg
@@ -56,6 +56,8 @@
 00504 = OrdTeam used up                           | 委託櫃號已用完(或沒設定)
 00505 = OrdNoMap not found                        | 委託書號對照表沒找到,可能是 MarketId 或 SessionId 不正確,或系統沒設定
 00506 = No OrdTeam permission                     | 無此委託櫃號權限
+00507 = No ScForce permission                     | 無此強迫權限
+00508 = OrdSt must be ec                          | 強迫操作,其委託狀態需要處於 因「風控檢查」拒絕 的狀態
 
 00600 = Order Routing request                                 | 請求 [主機{:AskToRemote:}] 協助繞送
 # 由繞送的接收端負責處理此錯誤.
