--- a/OmsErrCode/OmsErrCode.00xxx.cfg
+++ b/OmsErrCode/OmsErrCode.00xxx.cfg
@@ -25,7 +25,8 @@
 00110 = SessionId Error                           | SessionId 不正確
 00111 = SessionId Error, Symbol not found         | 新單沒有填 SessionId,且找不到商品資料,無法自動填 SessionId
 00112 = SessionId Error, Symbol incorrect         | 新單沒有填 SessionId,且商品資料的 SessionId 不正確
-00113 = TradingSession Closed                     | 已收盤
+00113 = TradingSession Closed: Rejected           | 已收盤,不可下單
+00114 = TradingSession Closed: Canceled           | 已收盤,取消未成交量
 
 00120 = MarketId cannot be identified             | 不認識的 MarketId,無法決定下單要求要送到何處
 00121 = MarketId Error, Symbol not found          | 新單沒有填 MarketId,且找不到商品資料,無法自動填 MarketId
