增加: OmsErrCode_Triggered_Cannot_ChgCond = 208, // 已觸發, 無法更改條件內容;

--- a/OmsErrCode/OmsErrCode.00xxx.cfg
+++ b/OmsErrCode/OmsErrCode.00xxx.cfg
@@ -42,6 +42,7 @@
 00205 = TimeInForce Error                         | TimeInForce有誤
 00206 = Symbol does not support market price      | 商品不支援市價下單
 00207 = No support for price change               | 不支援改價(定價交易無改價功能,或系統不支援改價)
+00208 = Order has been triggered. Can't amend Cond| 委託已觸發,不可修改條件內容.
 
 00300 = Ivr not found, or no permission           | 下單帳號有誤或沒權限
 00301 = Field not match                           | 刪改查提供的欄位與原委託不同
