(1)支援f9card.dev; (2)略降低OmsRcServer的收單延遲;

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,7 +20,8 @@ set(CXX_FLAGS
  ${F9OMS_CXX_FLAGS}
  ${FON9_CXX_FLAGS}
  )
-string(REPLACE ";" " " CMAKE_CXX_FLAGS "${CXX_FLAGS}")
+string(REPLACE ";" " " CXX_FLAGS "${CXX_FLAGS}")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${CXX_FLAGS}")
 
 set(C_FLAGS
  -g
@@ -34,11 +35,14 @@ set(C_FLAGS
  ${F9OMS_C_FLAGS}
  ${FON9_C_FLAGS}
  )
-string(REPLACE ";" " " CMAKE_C_FLAGS "${C_FLAGS}")
+string(REPLACE ";" " " C_FLAGS "${C_FLAGS}")
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${C_FLAGS}")
 
 include_directories(.)
 include_directories(../fon9)
-
+# ---
+include(../fon9/AddF9card.cmake)
+# ---
 if(${CMAKE_BUILD_TYPE} MATCHES "Release|release")
   link_directories(~/devel/output/fon9/release/fon9)
   link_directories(~/devel/output/fon9/release/f9tws)
