--- a/f9omsrc/CMakeLists.txt
+++ b/f9omsrc/CMakeLists.txt
@@ -6,7 +6,7 @@ set(f9omsrc_src
  OmsRcSyn.cpp
 )
 add_library(f9omsrc_s STATIC ${f9omsrc_src})
-target_link_libraries(f9omsrc_s f9omstw_s fon9_s pthread dl)
+target_link_libraries(f9omsrc_s f9omstw_s fon9_s ${f9_s_lib} pthread dl)
 
 #########################################################################
 ############################### Unit Test ###############################
