ErrCode 新增: 市場違約, 禁止新倉(10020=現貨,10021=期貨).

--- a/OmsErrCode/OmsErrCode.10xxx.cfg
+++ b/OmsErrCode/OmsErrCode.10xxx.cfg
@@ -24,26 +24,28 @@ $FAMT = U8:,
 # * 翻譯後:   現股庫存不足 53,000: 庫存=7,000/賣未成交=2,000/賣已成交=3,000/此筆新增=55,000/旗標=X,0,0
 # 若翻譯設定為「-」則使用原始「OMS訊息」.
 # --------------------------------------------
-10000 = Ivr not found                          | 找不到下單帳號(或帳號未啟用)
-10001 = OType Incorrect                        | OType 不正確或不支援
-10002 = Ivac Deactivation:{:Reason:}           | 帳號停用,原因={:Reason:}
-10003 = Subac Deactivation:{:Reason:}          | 停用子帳,原因={:Reason:}
-10004 = Spread Opt cannot ROD                  | 選擇權複式單,不可使用ROD
-10005 = Market price cannot ROD                | 巿價委託及一定範圍巿價,不可使用ROD
-10006 = PriType Error                          | 價格類別有誤
-10007 = Spread Opt PriType cannot MWP          | 選擇權組合式委託(複式單)不可使用一定範圍巿價委託
-10008 = SessionId not match Symbol Session     | 新單 SessionId 與商品的 SessionId 不符
-10009 = Night Session cannot DayTrade          | 夜盤不支援當沖
-10010 = Offset by FCM: cannot use market price | 代沖銷成交前,禁止使用市價代沖銷
-10011 = Offset by FCM: cannot use UpLmt ROD    | 代沖銷禁止使用 ROD 漲停價
-10012 = Offset by FCM: cannot use DnLmt ROD    | 代沖銷禁止使用 ROD 跌停價
-10013 = PosEff Incorrect                       | PosEff 不正確
-10014 = Only LmtROD can ChgPri                 | 只有「限價 ROD」可改價
-10015 = Already filled cannot FOK              | 已有成交,不可改為FOK
-10016 = Changed to PriLmt only ROD             | 改為「限價」只能使用「ROD」
-10017 = PosEff only Offset                     | 帳號限制只能平倉
-10018 = No 'Offset by FCM' permission          | 使用者沒有代沖銷權限
-10019 = Ivac cannot do 'Offset by FCM'         | 帳號禁止代沖銷
+10000 = Ivr not found                                                          | 找不到下單帳號(或帳號未啟用)
+10001 = OType Incorrect                                                        | OType 不正確或不支援
+10002 = Ivac Deactivation:{:Reason:}                                           | 帳號停用,原因={:Reason:}
+10003 = Subac Deactivation:{:Reason:}                                          | 停用子帳,原因={:Reason:}
+10004 = Spread Opt cannot ROD                                                  | 選擇權複式單,不可使用ROD
+10005 = Market price cannot ROD                                                | 巿價委託及一定範圍巿價,不可使用ROD
+10006 = PriType Error                                                          | 價格類別有誤
+10007 = Spread Opt PriType cannot MWP                                          | 選擇權組合式委託(複式單)不可使用一定範圍巿價委託
+10008 = SessionId not match Symbol Session                                     | 新單 SessionId 與商品的 SessionId 不符
+10009 = Night Session cannot DayTrade                                          | 夜盤不支援當沖
+10010 = Offset by FCM: cannot use market price                                 | 代沖銷成交前,禁止使用市價代沖銷
+10011 = Offset by FCM: cannot use UpLmt ROD                                    | 代沖銷禁止使用 ROD 漲停價
+10012 = Offset by FCM: cannot use DnLmt ROD                                    | 代沖銷禁止使用 ROD 跌停價
+10013 = PosEff Incorrect                                                       | PosEff 不正確
+10014 = Only LmtROD can ChgPri                                                 | 只有「限價 ROD」可改價
+10015 = Already filled cannot FOK                                              | 已有成交,不可改為FOK
+10016 = Changed to PriLmt only ROD                                             | 改為「限價」只能使用「ROD」
+10017 = PosEff only Offset                                                     | 帳號限制只能平倉
+10018 = No 'Offset by FCM' permission                                          | 使用者沒有代沖銷權限
+10019 = Ivac cannot do 'Offset by FCM'                                         | 帳號禁止代沖銷
+10020 = This account underlying stock violation couldn't create new position!  | 此交易人於現貨市場違約不允許新倉委託!
+10021 = This account futures violation couldn't create new position!           | 此交易人於期貨市場違約不允許新倉委託!
 
 10101 = Symbol not found                       | 找不到商品資料
 10102 = Symbol price not found                 | 參考價不存在,不可交易
