(1)OmsMdBS增加五檔報價; (2)增加 OmsMdLastPriceEv::LastQty_; (3)增加 OmsTwsMdSystem.cpp 處理證券即時行情; (4)f9utw增加條件單範例; (5)LineHelper避免結束時可能的crash;

--- a/OmsErrCode/OmsErrCode.10xxx.cfg
+++ b/OmsErrCode/OmsErrCode.10xxx.cfg
@@ -155,9 +155,12 @@ zh: 券庫存不足 {:Over:$FQTY:}: 庫存={:Bal:$FQTY:}/買未成交={:Leaves:$
 # ############################################
 # 11101..11107 需對應 10101..10107 的錯誤碼.
 11101 = Algo Trading Symbol not found                     | 找不到條件單觸發商品
-11102 = Symbol without MarketData                         | 商品無行情資料
+11102 = Symbol without MarketData                         | 商品無行情資料(系統設計有誤)
 11103 = Algo Order Price(CondPri) Error                   | 條件單觸發價沒填格
 11104 = Algo Order Price(CondPri) Over PriUpLmt:{:UpLmt:} | 條件單觸發價,超過漲停價:{:UpLmt:}
 11105 = Algo Order Price(CondPri) Over PriDnLmt:{:DnLmt:} | 條件單觸發價,超過跌停價:{:DnLmt:}
 11107 = Algo Order Price(CondPri) tick size not matched   | 條件單觸發價,檔位有誤
-11999 = Algo Order Parameter(CondOp) Error                | 條件單參數有誤
+11150 = Algo Order Qty(CondQty) Error                     | 條件單數量有誤(CondQty)
+11999 = Algo Order Parameter(CondOp) Error                | 條件單參數有誤(CondOp)
+11998 = Algo Order Parameter(CondName) Error              | 條件單參數有誤(CondName)
+11997 = Algo Order Deny                                   | 條件單沒權限
