--- a/OmsErrCode/OmsErrCode.12xxx.cfg
+++ b/OmsErrCode/OmsErrCode.12xxx.cfg
@@ -3,3 +3,6 @@
 # 12xxx = 策略單風控: 由策略單模組提供, 並覆蓋此檔.
 #
 # -------------------------------------------------
+
+12000 = Parent Order no LeavesQty, unable to change.                       | 母單已無剩餘量,無法改單
+12001 = All child-orders sent, parent-order can only delete or reduce Qty. | 母單已將子單全部送完,此時只能刪單或減量
