--- a/f9omstws/CMakeLists.txt
+++ b/f9omstws/CMakeLists.txt
@@ -14,6 +14,7 @@ set(f9omstws_src
  OmsTwsTradingLineFixSend.cpp
 
  OmsTwsImpT.cpp
+ OmsTwsMdSystem.cpp
 )
 add_library(f9omstws_s STATIC ${f9omstws_src})
 target_link_libraries(f9omstws_s f9omstw_s f9tws_s fon9_s pthread dl)
