(1)f9utw:刪改要求支援條件單; (2)可設定使用者權限:允許那些條件單; (2)OmsRcServerNote:方便後續開發者的調整;

--- a/f9utw/f9utwApiCondReq.cfg
+++ b/f9utw/f9utwApiCondReq.cfg
@@ -4,10 +4,13 @@
 # API下單表單設定: 條件單額外參數.
 #
 ###########################################################
-$CondReqOrd = {
+$CondChangeable = {
   CondPri,
   # 要判斷的[數量], 根據行情來源而定: 整股=張數; 零股=股數;
   CondQty,
+}
+$CondReqOrd = {
+  $CondChangeable
 }
 $CondReqNew = {
   # 若為空白,則使用下單時的商品;
@@ -15,5 +18,5 @@ $CondReqNew = {
   CondName,
   CondOp,
   CondAfterSc,
-  $CondReqOrd
+  $CondChangeable
 }
