--- a/OmsErrCode/OmsErrCode.10xxx.cfg
+++ b/OmsErrCode/OmsErrCode.10xxx.cfg
@@ -156,7 +156,7 @@ zh: 券庫存不足 {:Over:$FQTY:}: 庫存={:Bal:$FQTY:}/買未成交={:Leaves:$
 # 11101..11107 需對應 10101..10107 的錯誤碼.
 11101 = Algo Trading Symbol not found                     | 找不到條件單觸發商品
 11102 = Symbol without MarketData                         | 商品無行情資料(系統設計有誤)
-11103 = Algo Order Price(CondPri) Error                   | 條件單觸發價沒填格
+11103 = Algo Order Price(CondPri) Error                   | 條件單觸發價沒填
 11104 = Algo Order Price(CondPri) Over PriUpLmt:{:UpLmt:} | 條件單觸發價,超過漲停價:{:UpLmt:}
 11105 = Algo Order Price(CondPri) Over PriDnLmt:{:DnLmt:} | 條件單觸發價,超過跌停價:{:DnLmt:}
 11107 = Algo Order Price(CondPri) tick size not matched   | 條件單觸發價,檔位有誤
