--- a/f9utw/f9utwApiTwfAll.cfg
+++ b/f9utw/f9utwApiTwfAll.cfg
@@ -6,7 +6,7 @@
 ###########################################################
 $include:forms/ApiTwfAll.cfg
 $include:f9utwApiCondReq.cfg
-
+# ---------------------
 REQ.TwfNew {
   $CondReqNew
 }
@@ -22,4 +22,21 @@ RPT.TwfNew : abandon {
 RPT.TwfOrd : TwfNew {
   $CondReqOrd
 }
+# ---------------------
+REQ.TwfChg {
+  $CondChangeable
+}
+
+RPT.TwfChg {
+  $CondChangeable
+}
+
+RPT.TwfChg : abandon {
+  $CondChangeable
+}
+
+RPT.TwfOrd : TwfChg {
+  $CondReqOrd
+}
+# ---------------------
 
