--- a/f9utw/f9utwApiTwsAll.cfg
+++ b/f9utw/f9utwApiTwsAll.cfg
@@ -6,7 +6,7 @@
 ###########################################################
 $include:forms/ApiTwsAll.cfg
 $include:f9utwApiCondReq.cfg
-
+# ---------------------
 REQ.TwsNew {
   $CondReqNew
 }
@@ -22,4 +22,21 @@ RPT.TwsNew : abandon {
 RPT.TwsOrd : TwsNew {
   $CondReqOrd
 }
+# ---------------------
+REQ.TwsChg {
+  $CondChangeable
+}
+
+RPT.TwsChg {
+  $CondChangeable
+}
+
+RPT.TwsChg : abandon {
+  $CondChangeable
+}
+
+RPT.TwsOrd : TwsChg {
+  $CondReqOrd
+}
+# ---------------------
 
