增加 f9oms_IvRight_DenyCrBuyDbSell: [可用帳號]禁止證券信用開倉(資買、券賣);

--- a/OmsErrCode/OmsErrCode.00xxx.cfg
+++ b/OmsErrCode/OmsErrCode.00xxx.cfg
@@ -48,6 +48,8 @@
 00301 = Field not match                           | 刪改查提供的欄位與原委託不同
 00302 = No AllowAddReport permission, or No Order | 補單操作,必須有 AllowAddReport 權限; 或有權限但找不到委託
 00303 = IniReq Must be a RequestNew               | 不支援使用 OmsRequestIni 執行刪改查     # 不一定會發生,由實際下單步驟決定是否支援.
+00304 = Ivr deny CrBuy                            | 下單帳號禁止融資買進(IvRight).
+00305 = Ivr deny DbSell                           | 下單帳號禁止融券賣出(IvRight).
 
 00400 = Over flow control                         | 客戶端超過下單流量管制
 
