1.若下單要求的 RxKind 填入不當的值,可能造成的crash; 2.系統重啟時, 未送出的 Queuing=>ec=905, 未送出的 Waiting=>ec=906;

--- a/OmsErrCode/OmsErrCode.00xxx.cfg
+++ b/OmsErrCode/OmsErrCode.00xxx.cfg
@@ -84,3 +84,5 @@
 00902 = Disconnected after delivery, no delivered to Exchange | 送出後斷線,且未送達交易所
 00903 = Market data Error                                     | 行情線路無資料
 00904 = Cancelled before system execution                     | 取消於系統執行前
+00905 = Canceled queuing order after system restart           | 系統重啟後取消:排隊中的委託
+00906 = Canceled waiting order after system restart           | 系統重啟後取消:等候觸發的委託
