--- a/f9utw/f9utwApiCondReq.cfg
+++ b/f9utw/f9utwApiCondReq.cfg
@@ -13,10 +13,10 @@ $CondReqOrd = {
   $CondChangeable
 }
 $CondReqNew = {
-  # 若為空白,則使用下單時的商品;
-  CondSymbId,
-  CondName,
-  CondOp,
+  # SymbId.XX==Value
+  # 若沒提供「SymbId.」, 則使用下單時的商品;
+  # XX = CondName:LP,LQ,TQ...
+  # Value = 要判斷的值.
+  CxArgs,
   CondAfterSc,
-  $CondChangeable
 }
