--- a/OmsErrCode/OmsErrCode.10xxx.cfg
+++ b/OmsErrCode/OmsErrCode.10xxx.cfg
@@ -164,3 +164,8 @@ zh: 券庫存不足 {:Over:$FQTY:}: 庫存={:Bal:$FQTY:}/買未成交={:Leaves:$
 11999 = Algo Order Parameter(CondOp) Error                | 條件單參數有誤(CondOp)
 11998 = Algo Order Parameter(CondName) Error              | 條件單參數有誤(CondName)
 11997 = Algo Order Deny                                   | 條件單沒權限
+11996 = Algo Order Express Error                          | 條件運算式解析錯誤
+11995 = Algo Order Over Express unit count                | 條件運算式超過條件數量限制
+11994 = Algo Order Over Group sub request count           | 群組超過子單數量限制
+11993 = Algo Order CxUnit Args Error                      | 條件單元參數有誤
+11992 = This Algo Order does not support change cond      | 此條件單不支援更改條件內容
