增加條件改單邏輯;

--- a/OmsErrCode/OmsErrCode.00xxx.cfg
+++ b/OmsErrCode/OmsErrCode.00xxx.cfg
@@ -42,14 +42,15 @@
 00205 = TimeInForce Error                         | TimeInForce有誤
 00206 = Symbol does not support market price      | 商品不支援市價下單
 00207 = No support for price change               | 不支援改價(定價交易無改價功能,或系統不支援改價)
-00208 = Order has been triggered. Can't amend Cond| 委託已觸發,不可修改條件內容.
+00208 = Order has been triggered. Can't amend Cond| 委託已觸發,不可修改條件內容
+00209 = The order(NoLeavesQty) cannot be changed  | 無效(無剩餘量)委託無法改單
 
 00300 = Ivr not found, or no permission           | 下單帳號有誤或沒權限
 00301 = Field not match                           | 刪改查提供的欄位與原委託不同
 00302 = No AllowAddReport permission, or No Order | 補單操作,必須有 AllowAddReport 權限; 或有權限但找不到委託
 00303 = IniReq Must be a RequestNew               | 不支援使用 OmsRequestIni 執行刪改查     # 不一定會發生,由實際下單步驟決定是否支援.
-00304 = Ivr deny CrBuy                            | 下單帳號禁止融資買進(IvRight).
-00305 = Ivr deny DbSell                           | 下單帳號禁止融券賣出(IvRight).
+00304 = Ivr deny CrBuy                            | 下單帳號禁止融資買進(IvRight)
+00305 = Ivr deny DbSell                           | 下單帳號禁止融券賣出(IvRight)
 
 00400 = Over flow control                         | 客戶端超過下單流量管制
 
@@ -87,4 +88,5 @@
 00905 = Canceled queuing order after system restart           | 系統重啟後取消了:排隊中的委託
 00906 = Canceled waiting order after system restart           | 系統重啟後取消了:等候觸發的委託
 00907 = Stop waiting order after system restart               | 系統重啟後:等候觸發的委託,停止等候,但維持狀態不變,必須手動處理
-00908 = Re wait cond                                          | 條件單重新進入等候狀態
+00908 = Cond waiting                                          | 條件單已進入等候狀態
+00909 = Orig must be ChgReq                                   | 置換操作的原始下單要求,必須是刪改要求
