RcSyn:支援無委託書號的同步: 模組啟動時須加上 AllowOrdNoEmpty=Y

--- a/OmsErrCode/OmsErrCode.00xxx.cfg
+++ b/OmsErrCode/OmsErrCode.00xxx.cfg
@@ -44,6 +44,8 @@
 00207 = No support for price change               | 不支援改價(定價交易無改價功能,或系統不支援改價)
 00208 = Order has been triggered. Can't amend Cond| 委託已觸發,不可修改條件內容
 00209 = The order(NoLeavesQty) cannot be changed  | 無效(無剩餘量)委託無法改單
+00210 = The order(NoLeavesQty) cannot be rerun    | 無效(無剩餘量)委託無法 Rerun/Force
+00211 = Order has been triggered. Can't Rerun     | 委託已觸發,不可 Rerun/Force
 
 00300 = Ivr not found, or no permission           | 下單帳號有誤或沒權限
 00301 = Field not match                           | 刪改查提供的欄位與原委託不同
@@ -69,6 +71,10 @@
 00602 = Order Routing request Failed (Sender)                 | 回報回補時才發現繞送退單
 00610 = No Trading lines available                            | 繞送接收端,無可用線路
 00611 = System is busy                                        | 繞送接收端,忙碌中
+
+00620 = Host:{:Local:} Not tack over the host:{:Remote:}      | [備援機{:Local:}] 沒有接手 [主機{:Remote:}]
+00621 = RequestId No HostId                                   | RequestId 沒有提供原主機代號
+00622 = Not Support tack over ChgReq                          | 備援機制不支援接手改單要求
 
 00701 = Order not found                                       | 刪改查要求,但找不到對應的委託書,請檢查 IniSNO 或 OrdKey(BrkId or Market or SessionId or OrdNo)
 00702 = Missed new Order Report                               | 委託書號已存在,但遺漏新單回報
